# geog-312

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  Makefile  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  deploy.yml
_sources/: index.md
_sources/book/: markdown.ipynb  markdown.md  notebooks.ipynb
book/: bibliography.html  markdown.html  notebooks.html  references.bib
book/about/: acknowledgments.html  acknowledgments.md  instructor.html  instructor.md  schedule.html  schedule.md  software.html  software.ipynb  software.md  syllabus.html  textbooks.html  textbooks.md  videos.html
book/geospatial/: 01_get_started.html  01_get_started.ipynb  01_get_started.md  duckdb.html  duckdb.ipynb  duckdb.md  geemap.html  geemap.ipynb  geemap.md  geopandas.html  geopandas.ipynb  geopandas.md  get_started.html  get_started.ipynb  get_started.md  hypercoast.html  hypercoast.ipynb  hypercoast.md  leafmap.html  leafmap.ipynb  leafmap.md  maplibre.html  maplibre.ipynb  maplibre.md  raster_viz.html  raster_viz.ipynb  raster_viz.md  rasterio.html  rasterio.ipynb  rasterio.md  rioxarray.html  rioxarray.ipynb  rioxarray.md  samgeo.html  samgeo.ipynb  samgeo.md  vector_viz.html  vector_viz.ipynb  vector_viz.md  whitebox.html  (+5 more)
book/labs/: instructions.html  instructions.md  lab_01.html  lab_01.ipynb  lab_01.md  lab_02.html  lab_02.ipynb  lab_02.md  (+18 more)
(+130 files in other folders)
